        done on an "all or nothing" basis. This also applied to repeated 
        references.
        
    (b) \R did not give a hard partial match if \r was found at the end of the
        subject.
        
    (c) \X did not give a hard partial match after matching one or more 
        characters at the end of the subject.
        
    (d) When newline was set to CRLF, a pattern such as /a$/ did not give a 
        partial match for the string "\r".


Version 8.30 04-February-2012
-----------------------------

1.  Renamed "isnumber" as "is_a_number" because in some Mac environments this
    name is defined in ctype.h.

2.  Fixed a bug in fixed-length calculation for lookbehinds that would show up
    only in quite long subpatterns.

3.  Removed the function pcre_info(), which has been obsolete and deprecated
    since it was replaced by pcre_fullinfo() in February 2000.

4.  For a non-anchored pattern, if (*SKIP) was given with a name that did not
    match a (*MARK), and the match failed at the start of the subject, a
    reference to memory before the start of the subject could occur. This bug
    was introduced by fix 17 of release 8.21.

5.  A reference to an unset group with zero minimum repetition was giving
    totally wrong answers (in non-JavaScript-compatibility mode). For example,
    /(another)?(\1?)test/ matched against "hello world test". This bug was
    introduced in release 8.13.

6.  Add support for 16-bit character strings (a large amount of work involving
    many changes and refactorings).

7.  RunGrepTest failed on msys because \r\n was replaced by whitespace when the
    command "pattern=`printf 'xxx\r\njkl'`" was run. The pattern is now taken
    from a file.

8.  Ovector size of 2 is also supported by JIT based pcre_exec (the ovector size
    rounding is not applied in this particular case).

9.  The invalid Unicode surrogate codepoints U+D800 to U+DFFF are now rejected
    if they appear, or are escaped, in patterns.
